--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,9 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MoviesDatabase": "Server=(localdb)\\mssqllocaldb;Database=movies;Trusted_Connection=True;",
+    "jsonPathToInitialData": "https://raw.githubusercontent.com/ag-grid/ag-grid-docs/master/src/olympicWinners.json"
   }
 }
